--- a/viewer/package.json
+++ b/viewer/package.json
@@ -26,7 +26,8 @@
     "child_process": "^1.0.2",
     "jszip": "~3.10.1",
     "konva": "~8.4.2",
-    "magic-wand-tool": "~1.1.7"
+    "magic-wand-tool": "~1.1.7",
+    "sweetalert2": "^11.7.28"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
